<resources>
    <string name="app_name">Koshk</string>
    <string name="koshk">KOSHK</string>
    <string name="your_shopping_pal">Your shopping PAL</string>
    <string name="LOGIN">LOGIN</string>
    <string name="login_image">Login Image</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="don_t_have_account_already">Don\'t have account already?</string>
    <string name="e_mail">E-MAIL ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="REGISTER">REGISTER</string>
    <string name="already_hane_an_account">Already hane an account?</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="i_agree_to_the_terms_and_conditions">I Agree to the Terms and Conditions</string>
    <string name="login">Login</string>


    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="vertification_code">Vertification Code</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="vertify_message">The Confirmation Code has been Sent to The Phone Number That you Entered</string>
    <string name="err_msg_enter_Telephone_number">Please enter your telephone number</string>
    <string name="otp_vertification">OTP Vertification</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="didn_t_receive_the_otp">Didn\'t Receive The OTP?</string>
    <string name="confirm">Confirm</string>
    <string name="i_agree_to_the_terms_and_condition">Agree to Terms and Conditions</string>
    <string name="please_wait">Please Wait…</string>
    <string name="lbl_forgot_password">Forget Password ?</string>
    <string name="content_description">screen background</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="et_hint_email_id">E-MAIL ID</string>
    <string name="email_sent_success">\"Email sent Successfully to reset your password !  \"</string>
    <string name="register_success">You are registered successfully</string>

    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="my_profile">My Profile</string>
    <string name="image_selection_failed">Image selection failed !</string>
    <string name="err_msg_enter_mobile_number">Please enter you mobile number </string>
    <string name="msg_profile_update_success">Your Profile updated successfully  </string>


    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <!--<string name="title_activity_dashboard">MainActivity</string>-->

    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="btn_lbl_logout">Log Out</string>
    <string name="lbl_addresses">Adresses</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="action_add_product">Add product</string>
    <string name="title_add_product">Add product</string>
    <string name="et_hint_product_title">Product title</string>
    <string name="et_hint_product_price">Product price</string>
    <string name="et_hint_product_description">Product description</string>
    <string name="et_hint_product_quantity">Product quantity</string>


    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>

    <string name="product_uploaded_success_message">Your product is uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="home">Home</string>
    <string name="title_home">Home</string>


    <string name="product_delete_success_message">Your product is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="title_edit_product">Edit Product</string>
    <string name="product_updated_success_message">Product updated successfully</string>

    <string name="btn_label_add_to_cart">ADD TO CART</string>
    <string name="btn_label_go_to_cart">GO TO CART</string>
    <string name="success_message_item_added_to_cart">Product was added to your cart</string>

    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="msg_item_removed_successfully">Item removed successfully</string>
    <string name="lbl_out_of_stock">Out of stock</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>

    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>

    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>


    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>

    <string name="err_your_address_added_successfully">Your address is added successfully.</string>

    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>

    <string name="err_your_address_deleted_successfully">Your address is deleted successfully.</string>

    <!--START-->
    <string name="title_select_address">SELECT ADDRESS</string>
    <!--END-->
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>

    <string name="no_orders_placed_yet">No orders placed yet!</string>

    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>

    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>

    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_out_yet">No products sold out yet!</string>

    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>