<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />


    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_vector_products"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/navigation_sold_products"
        android:icon="@drawable/ic_vector_sold_products"
        android:title="@string/title_sold_products" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/my_profile" />


</menu>