<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/login_gradient_background">


    </FrameLayout>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/login_image"
        android:src="@drawable/im_login" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LOGIN"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:textSize="@dimen/btn_textSize"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/et_background"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/btn_textSize" />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/et_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/btn_textSize" />

        </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/forgot_password_textSize"
         />


        <Button
            android:id="@+id/btnLogin"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_gradient_background"
            android:text="@string/LOGIN"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_textSize"
            android:layout_marginTop="20dp"
            android:paddingEnd="120dp"
            android:padding="10dp"
            android:paddingStart="120dp"/>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account_already"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                android:textSize="@dimen/lbl_text_view_textSize" />
            <TextView
                android:id="@+id/tvRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:textSize="@dimen/lbl_text_view_textSize"
                android:layout_margin="10dp"/>
        </LinearLayout>



</LinearLayout>