<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UserProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/login_gradient_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/my_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_user_profile_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_user_image"
                android:layout_width="@dimen/profile_user_image_size"
                android:layout_height="@dimen/profile_user_image_size"
                android:layout_marginTop="@dimen/profile_user_image_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/colorLightGray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_user_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/profile_user_photo_margin"
                    android:background="@color/colorLightGray"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_user_placeholder" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/user_image_background" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/llInputs"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/fl_user_image">

                <EditText
                    android:id="@+id/et_firstNAme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/et_background"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/btn_textSize" />

                <EditText
                    android:id="@+id/et_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/et_background"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/btn_textSize" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/et_background"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/btn_textSize" />

                <EditText
                    android:id="@+id/et_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/et_background"
                    android:hint="@string/et_hint_mobile_number"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/btn_textSize" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_radio_button_height"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@id/btn_submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_mobile_number">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/profile_radio_button_marginStartEnd"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_gender_tab_selector"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/rb_lbl_male"
                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_gender_tab_selector"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/rb_lbl_female"
                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                        android:textStyle="bold" />
                </RadioGroup>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_gradient_background"
                    android:padding="10dp"
                    android:paddingStart="120dp"
                    android:paddingEnd="120dp"
                    android:text="@string/btn_lbl_submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_textSize"
                    android:textStyle="bold" />



            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>